// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSONEditor component matches the snapshot 1`] = `
<ReactAce
  cursorStart={1}
  editorProps={Object {}}
  enableBasicAutocompletion={false}
  enableLiveAutocompletion={false}
  enableSnippets={false}
  focus={false}
  fontSize={12}
  height="372px"
  highlightActiveLine={true}
  maxLines={null}
  minLines={null}
  mode="sql"
  name="name"
  navigateToFileEnd={true}
  onChange={null}
  onLoad={null}
  onPaste={null}
  onScroll={null}
  placeholder={null}
  readOnly={false}
  scrollMargin={
    Array [
      0,
      0,
      0,
      0,
    ]
  }
  setOptions={Object {}}
  showGutter={true}
  showPrintMargin={true}
  style={Object {}}
  tabSize={2}
  theme="textmate"
  value=""
  width="100%"
  wrapEnabled={true}
/>
`;

exports[`JSONEditor component matches the snapshot with fixed height 1`] = `
<ReactAce
  cursorStart={1}
  editorProps={Object {}}
  enableBasicAutocompletion={false}
  enableLiveAutocompletion={false}
  enableSnippets={false}
  focus={false}
  fontSize={12}
  height="16px"
  highlightActiveLine={true}
  maxLines={null}
  minLines={null}
  mode="sql"
  name="name"
  navigateToFileEnd={true}
  onChange={null}
  onLoad={null}
  onPaste={null}
  onScroll={null}
  placeholder={null}
  readOnly={false}
  scrollMargin={
    Array [
      0,
      0,
      0,
      0,
    ]
  }
  setOptions={Object {}}
  showGutter={true}
  showPrintMargin={true}
  style={Object {}}
  tabSize={2}
  theme="textmate"
  value=""
  width="100%"
  wrapEnabled={true}
/>
`;

exports[`JSONEditor component matches the snapshot with fixed height with no value 1`] = `
<ReactAce
  cursorStart={1}
  editorProps={Object {}}
  enableBasicAutocompletion={false}
  enableLiveAutocompletion={false}
  enableSnippets={false}
  focus={false}
  fontSize={12}
  height="512px"
  highlightActiveLine={true}
  maxLines={null}
  minLines={null}
  mode="sql"
  name="name"
  navigateToFileEnd={true}
  onChange={null}
  onLoad={null}
  onPaste={null}
  onScroll={null}
  placeholder={null}
  readOnly={false}
  scrollMargin={
    Array [
      0,
      0,
      0,
      0,
    ]
  }
  setOptions={Object {}}
  showGutter={true}
  showPrintMargin={true}
  style={Object {}}
  tabSize={2}
  theme="textmate"
  width="100%"
  wrapEnabled={true}
/>
`;
